# routes/comment.js
@@ -6,7 +6,7 @@ const routes = express.Router({
   mergeParams: true,
 });
 
-const commentController = require("../controller/comment");
+const commentController = require("../controller/comment/comment");
 
 const isAuth = (req, res, next) => {
   if (!req.user) {
@@ -32,7 +32,7 @@ const isUser = async (req, res, next) => {
 routes.get("/postId/:postId", commentController.getCommentByPostId);
 routes.get("/:id", commentController.getCommentByID);
 routes.post("/", isAuth, commentController.addComment);
-routes.get("/userid", isAuth, commentController.getCommentByUserID);
+routes.get("/user/comment", isAuth, commentController.getCommentByUserID);
 routes.delete("/:id", isAuth, isUser, commentController.deleteComment);
 routes.put("/:id", isAuth, isUser, commentController.updateComment);
 
