# routes/swagger-output.json
@@ -5,24 +5,11 @@
     "description": "A Blog API that allows authors to publish posts and comment on other posts",
     "version": "1.0.0"
   },
-  "securityDefinitions": {
-    "api_key": {
-      "type": "apiKey",
-      "name": "api_key",
-      "in": "header"
-    },
-    "oauth": {
-      "type": "oauth2",
-      "authorizationUrl": "https://blog-api-group-3.herokuapp.com/users/auth/google",
-      "flow": "implicit",
-      "scopes": {
-        "read:user": "read user data"
-      }
-    }
-  },
   "host": "blog-api-group-3.herokuapp.com",
   "basePath": "/",
-  "schemes": ["https"],
+  "schemes": [
+    "https"
+  ],
   "paths": {
     "/": {
       "get": {
@@ -230,7 +217,10 @@
                   "example": "Potter11?"
                 }
               },
-              "required": ["email", "password"]
+              "required": [
+                "email",
+                "password"
+              ]
             }
           }
         ],
@@ -490,7 +480,10 @@
                   "example": "Pottesuidhnkr"
                 }
               },
-              "required": ["comment", "postId"]
+              "required": [
+                "comment",
+                "postId"
+              ]
             }
           }
         ],
@@ -521,7 +514,10 @@
                   "example": "Pottesuidhnkr"
                 }
               },
-              "required": ["comment", "postId"]
+              "required": [
+                "comment",
+                "postId"
+              ]
             }
           }
         ],
@@ -535,11 +531,15 @@
         }
       }
     },
-    "/comments/userid": {
+    "/comments/user/comment": {
       "get": {
         "description": "Get comment by UserId",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     }
   }
